--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${PORT}
+  port: 8080
 
 springdoc:
   swagger-ui:
@@ -7,18 +7,25 @@ springdoc:
 
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#    username: ${DB_USERNAME}
+#    password: ${DB_PASSWORD}
+  driver-class-name: com.mysql.cj.jdbc.Driver
+  password: rootroot
+  url: jdbc:mysql://localhost:3306/BookShop?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+  username: root
+
   data:
     cassandra:
       schema-action: create_if_not_exists
   jpa:
-    open-in-view: false
-    hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: true
+    show-sql: true
+
+
   servlet:
     multipart:
       max-file-size: 10MB
