--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 spring.security.user.name = zeroco
 spring.security.user.password = zerocopw
 spring.seucrity.user.roles = USER, ADMIN
